--- a/TheCursedReturn/TCR_ALPHA/css/inicio.css
+++ b/TheCursedReturn/TCR_ALPHA/css/inicio.css
@@ -110,7 +110,7 @@ footer {
     justify-content: center;
     align-items: flex-start;
     margin: 8px;
-
+    width: 85%;
 }
 
 .textBox p {
@@ -123,7 +123,7 @@ footer {
 }
 
 .textBox input {
-    /* width: 100%; */
+    width: 100%;
     padding: 12px;
     margin: 5px 0;
     border: 2px solid #2c3372;
@@ -131,6 +131,8 @@ footer {
     font-size: 16px;
     background-color: rgba(255, 255, 255, 0.9);
     transition: all 0.3s ease;
+
+    box-sizing: border-box;
 }
 
 .textBox input:focus {
@@ -184,4 +186,32 @@ footer {
     border-top: 4px solid #2c3372;
     border-bottom: 4px solid #2c3372;
     border-radius: 100%;
+}
+
+.contrasenaBox {
+    position: relative;
+    width: 100%;
+}
+
+.contrasenaBox input {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.toggle-password {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    user-select: none;
+    font-size: 18px;
+    color: #333;
+}
+
+#password_restriction {
+    font-size: 14px;
+    color: #d5d4cc;
+    margin-top: 5px;
+    text-align: left;
 }
