--- a/TheCursedReturn/TCR_ALPHA/css/stats.css
+++ b/TheCursedReturn/TCR_ALPHA/css/stats.css
@@ -155,6 +155,7 @@ p {
     background-color: #d5d4cc;
     border-radius: 10px;
     padding: 10px;
+    border: black solid 2px;
 }
 
 .chartContainer canvas{
