--- a/TheCursedReturn/TCR_ALPHA/css/story.css
+++ b/TheCursedReturn/TCR_ALPHA/css/story.css
@@ -71,3 +71,26 @@
   from {opacity: .4}
   to {opacity: 1}
 }
+
+#button {
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    color: #d5d4cc;
+    padding: 10px 16px;
+    font-size: 50px;
+    border-radius: 12px;
+    box-shadow: 3px 3px #ad1324;
+    font-family: copperplate;
+    text-shadow: 2px 2px #ad1324;
+    cursor: pointer;
+}
+
+.game_button {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    display: none; /* Initially hidden */
+}
