--- a/TheCursedReturn/TCR_ALPHA/css/creditos.css
+++ b/TheCursedReturn/TCR_ALPHA/css/creditos.css
@@ -22,13 +22,13 @@ body {
 
 .column1 {
     padding-left: 100px;
-    padding-right: 50px;
+    padding-right: 25px;
     width: 500px;
 }
 
 .column2 {
     padding-right: 100px;
-    padding-left: 50px;
+    padding-left: 25px;
     width: 500px;
 }
 
@@ -88,4 +88,8 @@ p, ol, ul {
 a {
     text-decoration: none;
     color: whitesmoke;
+}
+
+.sound_effects {
+    font-size: 10px;
 }
